[Android WebAPK] Simplify debugging WebAPK updates with release Chrome

This CL:
1) Prevents the Log messages in WebApkUpdateManager from getting stripped
  in release by converting the logs from Log.v to Log.i
  The Log messages are useful for determining:
  - Whether the updated web page satisfies the PWA checklist
  - Whether an update is requested

2) Adds to chrome://webapks
   WebappDataStorage#KEY_LAST_REQUESTED_SHELL_APK_VERSION
   WebappDataStorage#KEY_RELAX_UPDATES
   These two SharedPreferences are useful for determining how long to
   wait to launch the WebAPK in order to run the update check. In the
   case of "relaxed updates", the update check is done every 30 days.

BUG=815282
R=dominickn@,calamity@
TBR=yfriedman@
    (for CollectionUtil.java change reviewed in another CL)

Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I87c77ca76884515f967a9bd9d331eb5c2af7bbfe
Reviewed-on: https://chromium-review.googlesource.com/936582
Commit-Queue: Peter Kotwicz <pkotwicz@chromium.org>
Reviewed-by: Peter Kotwicz <pkotwicz@chromium.org>
Reviewed-by: Dominick Ng <dominickn@chromium.org>
Reviewed-by: calamity <calamity@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541933}
Former-commit-id: 9d0c67e80fb11b4044892cf018da1ffea0f36b29