chrome/browser/android/webapk/webapk_info.cc
@@ -18,7 +18,9 @@ WebApkInfo::WebApkInfo(std::string name,
                        blink::WebDisplayMode display,
                        blink::WebScreenOrientationLockType orientation,
                        int64_t theme_color,
-                       int64_t background_color)
+                       int64_t background_color,
+                       base::Time last_update_check_time,
+                       bool relax_updates)
     : name(std::move(name)),
       short_name(std::move(short_name)),
       package_name(std::move(package_name)),
@@ -31,7 +33,9 @@ WebApkInfo::WebApkInfo(std::string name,
       display(display),
       orientation(orientation),
       theme_color(theme_color),
-      background_color(background_color) {}
+      background_color(background_color),
+      last_update_check_time(last_update_check_time),
+      relax_updates(relax_updates) {}
 
 WebApkInfo::~WebApkInfo() {}
 
